Section 1 fixed menu and content layout issues

--- a/landing_page/styles2.css
+++ b/landing_page/styles2.css
@@ -8,73 +8,55 @@ body {
     /* justify-content: stretch; */
     margin: 0;
     font-family: Roboto;
-    overflow: hidden;
 }
 
 ul {
     display: flex;
     list-style: none;
     margin: 0;
-    /* padding: 0; */
     gap: 25px;
-    /* justify-content: space-around; */
+    /* justify-content: flex-end; */
     /* flex: 1; */
 }
 
-.footer {
+.header, .footer {
     display: flex;
     /* flex: 1; */
     background-color: #1f2937;
-    flex-direction: column;
+    /* flex-direction: column; */
     width: 100%;
     min-height: 75px;
-    /* align-items: center; */
+    align-items: center;
     /* justify-content: space-between; */
     padding: 10px;
     /* height: 30px; */
 }
 
-.head {
+/* .header-content {
     display: flex;
-    align-items: center;
-    padding: 20px 0px;
-    /* min-height: 75; */
-}
-
-.container1 {
-    display: flex;
-    /* flex-grow: 1; */
-    flex-direction: column;
-    width: 100%;
-    background-color: #1f2937;
-    /* justify-content: space-around; */
-    /* align-items: center; */
-    /* padding: 50px; */
-    color: white;
-}
+    width: 70%;
+    /* justify-content: space-between;
+} */
 
 .logo {
     /* margin-right: auto; */
-    /* width: 50%; */
+    width: 50%;
     color: #f9faf8;
     font-size: 24px;
-    margin-left: 15%;
-    /* margin-right: 0; */
-    /* padding-right: 0; */
-    /* justify-content: flex-start; */
+    margin-left: 0%;
+    /* margin-right: auto; */
+    justify-content: flex-start;
     font-weight: bold;
-    /* align-items: center; */
     /* flex: 1 */
 }
 
 .menu_items {
     /* display: flex; */
-    margin-left: auto;
+    /* margin-left: auto; */
     margin-right: 15%;
-    /* align-items: center; */
-    /* justify-content: space-between; */
+    /* justify-content: flex-end; */
     /* flex-wrap: wrap; */
-    /* width: 50%; */
+    width: 50%;
     /* flex: 1 */
 }
 
@@ -82,6 +64,17 @@ ul {
     color: #e5e7eb;
     font-size: 18px;
     font-weight: 300;
+}
+
+.container1 {
+    display: flex;
+    flex-grow: 1;
+    width: 100%;
+    background-color: #1f2937;
+    justify-content: space-around;
+    align-items: center;
+    padding: 50px;
+    color: white;
 }
 
 .hero {
@@ -92,7 +85,7 @@ ul {
 .text1 {
     margin-left: 15%;
     margin-right: 10px;
-    /* flex: 1; */
+    flex: 1;
 }
 
 .sign_up {
@@ -106,7 +99,7 @@ ul {
 }
 
 .image {
-    /* flex: 1; */
+    flex: 1;
     align-items: flex-end;
     margin-right: 15%;
     margin-left: 10px;
